@@ -1001,13 +1001,14 @@ var CloudCommander, Util, DOM = {}, CloudFunc;
      * get size
      * @pCurrentFile
      */
-    DOM.loadCurrentSize          = function(pCurrentFile){
+    DOM.loadCurrentSize          = function(pCallBack, pCurrentFile){
         var lRet,
             lLink = DOM.getCurrentPath(pCurrentFile);
             /* если это папка - возвращаем слово dir вместо размера*/
         
         DOM.RESTfull.read(lLink, function(pSize){
-            Util.log(pSize);
+            DOM.setCurrentSize(pSize);
+            Util.exec(pCallBack);
         }, '?size');
         
         return lRet;
@@ -1233,13 +1234,27 @@ var CloudCommander, Util, DOM = {}, CloudFunc;
     };
     
     /**
+     * selected file check
+     * 
+     * @param pCurrentFile
+     */
+    DOM.isSelected              = function(pSelected){
+        var lClass      = pSelected && pSelected.className,
+            lIsSelected  = lClass && lClass.indexOf(SELECTED_FILE) >= 0;
+        
+        return lIsSelected;
+    };
+    
+    /**
      * check is current file is a directory
      * 
      * @param pCurrentFile
      */
-    DOM.isCurrentIsDir            = function(pCurrentFile){
-        var lSize   = DOM.getCurrentSize(pCurrentFile),
-            lRet    = lSize === 'dir';
+    DOM.isCurrentIsDir            = function(pCurrent){
+        var lCurrent    = pCurrent || DOM.getCurrentFile(),
+            lFileType   = DOM.getByClass('mini-icon', lCurrent)[0],
+            lClass      = lFileType && lFileType.className,
+            lRet        = lClass && lClass.indexOf('directory') >= 0;
         
         return lRet;
     };
