@@ -41,23 +41,34 @@
                         fs.readdir(pDir, function(pError, pFiles) {
                             lAsyncRunning--;
                             
+                            var lDirPath, n;
+                            
                             if (!pError){
-                                lFileCounter += pFiles.length;
+                                n                = pFiles.length;
+                                lFileCounter    += n;
                                 
-                                var lDirPath;
-                                for (var i = 0, n = pFiles.length; i < n; i++) {
+                                for (var i = 0; i < n; i++) {
                                     lDirPath = path.join(pDir, pFiles[i]);
                                     getDirSize(lDirPath);
                                 }
                             }
+                            
+                            if(!n)
+                                execCallBack();
                         });
                     }
                 }
                 
-                if (!lFileCounter && !lAsyncRunning)
-                    pCallBack(null, lTotal);
-                });
+                execCallBack();
+            });
+        }
+        
+        function execCallBack(){
+            if (!lFileCounter && !lAsyncRunning){
+                console.log(lTotal);
+                pCallBack(null, lTotal);
             }
+        }
         
         return getDirSize(pDir);
     };
