@@ -103,6 +103,7 @@
                         dir.getSize(p.name, function(pErr, pSize){
                             if(!pErr){
                                 var lSize = CloudFunc.getShortSize(pSize);
+                                console.log(lSize);
                                 main.sendResponse(pParams, lSize);
                             }
                             else
